--- a/style.css
+++ b/style.css
@@ -1,222 +1,88 @@
-@import url('https://fonts.googleapis.com/css2? family=Roboto&display=swap');
-/* Изображение */
 body {
-    font-family: 'Roboto';
-    font-size: 18px;
-    font-weight: 600;
-    padding-bottom: 5px;
+    background-image: url(image/bg[img].png);   
+    margin: 0;
+    height: 0; 
+    font-family: sans-serif;
 }
-.conteiner {
-    max-width: 900px;
-    margin: auto;
-    padding-top: 30px;
-}
-.img {
-    width: 200px;
-    border-radius: 15px;
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25); 
-   
-    
-}
-
-/* Блок инфа */
-.card {
-    border-radius: 20px;
-    padding: 15px 20px;
-    margin-bottom: 10px;
-}
-.header {
-  background: rgba(235, 235, 235, 1); 
-  padding: 15px;  
-} 
-.info {
-    padding-left: 50px;
-    margin-bottom: 20px;
+.logo {
+    height: 86px;
+    background: black;
+    color: #fff;
     display: flex;
 }
-.info_text {
+.logo-img {
+    background-color: #a4d35a;
+    width: 404px;
+    height: 86px;
+}
+.logo-img img {
+    float: right;
+    margin: 30px 75px;
+}
+.logo li {
+    list-style-type: none;
+    display: inline-block;
+    height: 86px;  
+    padding-top: 30px; 
+}
+.logo li:nth-child(1) {
     margin-left: 50px;
 }
-@media (max-width: 600px) {
-    .info {
-        display: block;
-        text-align: center;
-        padding-left: 0;
-        padding-top: 10px;
-        }
-    .info_text {
-        margin: 0;  
-    }
-    .conteiner {
-        padding-top: 0;
-    }
-}
-.info_text p {
-    font-style: italic;
-    font-weight: bold;
-    color: rgb(80, 79, 79);
-    margin: 0;
-    }
-/* Хобби моё */
-.hobby {
-    background: rgb(204, 204, 204);
-    margin-bottom: 0;  
-}
-.hobby h3 {
-    padding-left: 100px;
-    margin: 10px 15px;
-}
-.hobby ul {
-    list-style: none;
-}
-.hobby li {
-    padding: 5px 0;
-    font-weight: 400;
-    border-bottom: 1px solid #000;
-    font-size: 14px;
-    color: rgb(80, 79, 79);
-}
-.hobby ol {
-    font-style: italic;
-    padding-left: 25px;
-}
-@media (max-width: 600px) {
-    .hobby h3 {
-        padding: 0;
-        text-align: center;
-    }
-    .hobby ul {
-        padding-left: 0;
-    }
-}
-.info_text h4 {
-    padding: 15px 10px;
-    padding-bottom: 5px;
-    margin: 0;
-}
-a {
+.logo a {
     text-decoration: none;
-    color:rgb(110, 75, 75);
-    padding: 5px;
-}
-
-
-
-a:hover {
-    background: rgb(235, 235, 235);
-    color: lightslategray;
-}
-a:active {
-    color: blue;
-}  
-
-.tables {
-    background: rgb(145, 145, 177);
-}
-.tables h3 {
+    color: #fff; 
+    font-family: inherit; 
+    margin: 30px 40px;
     text-align: center;
-    padding: 5px 0;
-    margin: 0;
-    font-size: 20px;
 }
-.list_5 {
-    width: 100%;
-}
-.list_5 th {
-    text-align: center;
-    padding: 5px 0 10px;
-    border-bottom: 1px solid black;
-    font-size: 16px;
-}  
-.list_5 td {
-    text-align: center;
-    padding: 6px 0;
-    border-bottom: 1px solid black ;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 14px;
-}   
-.btm {
-    background: #000;
+.logo a:hover, .logo a:active, .logo a:visited {
     color: #fff;
-    padding: 10px 25px;
-    border: none;
-    border-radius: 10px;
-    margin-bottom: 0px;
-}
-.btm:hover {
-    opacity: 0.8;
-    color: rgb(255, 212, 212);
+} 
+.logo li:hover {
+    box-sizing: border-box;
+    background: rgb(41, 41, 41);
+    border-bottom: 5px solid #a4d35a;
 }
 
-.row {
-    margin-bottom: 10px;
-    display: flex;
-}
-.row .form_group {
-    margin-right: 20px;
-    width: 50%;
-}
 
-.form {
-    background: rgb(235, 242, 255);
-}
-.form h3 {
+
+.form_log_text {
+    margin-top: 50px;
     text-align: center;
-    padding-top: 10px;
-    margin-bottom: 10px;
 }
-.form_group label {
-    display: block;
-    font-size: 14px;
-    color: rgb(182, 181, 255);
-    
+.form_log {
+    box-sizing: border-box;
+    background: #d7d0ff;
+    border: 1px solid #a6a1c5;
+    border-radius: 15px;
+    width: 400px;
+    height: 320px;
+    margin: 280px auto;
 }
-.form_group input,
-.form_group textarea {
+.group_log_list {
+    padding-top: 30px;
+    padding: 15px 30px 10px;
+}
+.group_form_input {
     width: 100%;
     box-sizing: border-box;
-    border: none;
-    background: transparent;
-    color: #000;
-    padding: 15px 0 10px;
-    font-family: inherit;
-    outline: none;
+    font: inherit;
+    height: 30px;
+    border: 1px solid #0f8fee;
+    border-radius: 7px;
+    padding-left: 10px;
 }
-.form_group textarea {
-    margin-top: 10px;
-    padding-left: 20px;
-    margin-bottom: 10px;
-}
-.msg {
-    margin-left: 20px;
-}
-@media (max-width: 650px) {
-    .row {
-    display: block;
-    }
-    .row .form_group {
-        width: 100%;
-        margin-right: 0;
-        margin-bottom: 5px;
-        }
-    .form_group textarea {
-        padding-left: 0;
-        margin-top: 0;
-    }
-    .msg {
-        margin-left: 0;
-    }
-}
-.form_group textarea:hover {
-    outline: 1px solid lightblue;
-    border-radius: 20px;
-    padding-left: 20px;
-}
-.form_group input {
-    border-bottom: rgb(186, 188, 252) solid 1px;
-}
-.form_group input:hover, .form_group textarea:hover {
-    opacity: 0.7;
+.group_form_input::placeholder {
+    font-style: italic;
 }
 
+.group_text {
+    padding-bottom: 10px;
+    display: inline-block;
+    
+}
+.group_form_input:focus {
+    outline: 2px solid #0f8dee;
+    outline-offset: -2px;
+    border-radius: 7px;
+}
